# xplane-panelcast

./: .clang-format  .gitignore  CMakeLists.txt  Logger.h  Panelcast.cpp  Panelcast.sln  Panelcast.vcxproj  README.md  panelcast_client.py
Panelcast.xcodeproj/: project.pbxproj
client/: README.md  panelcast_client.py
clients/ios_client/: .gitignore
clients/ios_client/Panelcast/Panelcast/: ContentView.swift  FragmentBuffer.swift  Frame.swift  FrameReassembler.swift  ImageFactory.swift  LZ4Swift.swift  MetalRGB565Converter.swift  NetworkUtils.swift  PacketHeader.swift  PanelModel.swift  PanelStore.swift  PanelView.swift  PanelcastApp.swift  RGB565ToRGBA.metal  ReceiverService.swift  UDPReceiver.swift
clients/ios_client/Panelcast/Panelcast.xcodeproj/: project.pbxproj
clients/ios_client/Panelcast/Panelcast.xcodeproj/xcshareddata/xcschemes/: Panelcast.xcscheme
clients/ios_client/scripts/: swift-format.sh
clients/python_client/: panelcast_client.py
config/: config.json
merge/: merged.txt
src/: ConfigManager.cpp  ConfigManager.h  FrameSender.cpp  FrameSender.h  FrameTransport.h  Logger.h  PanelCapturer.cpp  PanelCapturer.h  PanelFrameHeader.h  PanelROI.h  Panelcast.cpp  PanelcastPlugin.cpp  PanelcastPlugin.h  RawPanelFrame.h  Rgb565Converter.h  UdpSender.cpp  UdpSender.h  WsSender.cpp  WsSender.h
web/: index.html
